--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
       name="YFu"
       content="Gacha game with customizable waifus"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Y-Fu</title>
   </head>
-  <body>
+  <body style="margin: 0;">
     <div id="root"></div>
   </body>
 </html>
