--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Y-Fu</title>
+    <title>YFu</title>
   </head>
-  <body style="margin: 0;">
+  <body style="margin: 0; overflow: hidden;">
     <div id="root"></div>
   </body>
 </html>
